--- a/.github/workflows/build-gem.yml
+++ b/.github/workflows/build-gem.yml
@@ -22,7 +22,7 @@ jobs:
       matrix:
         type:
           - final
-          - alpha
+          - dev
     runs-on: ubuntu-latest
     name: Build gem (${{ matrix.type }})
     steps:
@@ -56,7 +56,8 @@ jobs:
           echo git_sha_short="${git_sha_short}"
 
           # Set component values:
-          # - PRE is `alpha` to be ordered before `beta` and `rc`
+          # - PRE is `dev` to denote being a development version and
+          #   act as a categorizer.
           # - BUILD starts with CI run id for ordering.
           # - BUILD has CI run id for traceability, prefixed by `gha`
           #   for identification.
@@ -105,7 +106,7 @@ jobs:
       matrix:
         type:
           - final
-          - alpha
+          - dev
     runs-on: ubuntu-latest
     name: Test gem
     needs:
@@ -130,7 +131,7 @@ jobs:
       fail-fast: false
       matrix:
         type:
-          - alpha
+          - dev
     runs-on: ubuntu-latest
     name: Push gem
     needs:
