--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,4 +10,5 @@ jobs:
         with:
           ruby-version: '3.2'
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          rubygems: 'latest'
       - run: bundle exec rake typecheck
