--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,7 @@ test_containers:
   - &memcached_port 11211
   - &container_agent
     image: datadog/agent
+    name: ddagent
     environment:
       - DD_APM_ENABLED=true
       - DD_BIND_HOST=0.0.0.0
@@ -98,6 +99,7 @@ test_containers:
   - &agent_port 8126
   - &container_testagent
     image: williamconti549/dd-apm-test-agent:js-dev
+    name: testagent
     environment:
       - LOG_LEVEL=DEBUG
       - TRACE_LANGUAGE=ruby
