--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -355,12 +355,12 @@ services:
       - ddagent_var_run:/var/run/datadog
 
   testagent:
-    image: williamconti549/dd-apm-test-agent:js-dev
+    image: williamconti549/dd-apm-test-agent:latest
     ports:
         - "127.0.0.1:9126:9126"
     environment:
         - LOG_LEVEL=DEBUG
-        - TRACE_LANGUAGE=javascript
+        - TRACE_LANGUAGE=ruby
         - DISABLED_CHECKS=trace_tag_validation
         - DD_TRACE_AGENT_URL=http://ddagent:8126
         - PORT=9126
