--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -516,12 +516,12 @@ workflows:
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.3
-          integration_apps: 'rack rails-five'
+          integration_apps: 'rack'
           ruby_version: '2.3'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.4
-          integration_apps: 'rack rails-five'
+          integration_apps: 'rack'
           ruby_version: '2.4'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
