--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -355,7 +355,7 @@ services:
       - ddagent_var_run:/var/run/datadog
 
   testagent:
-    image: williamconti549/dd-apm-test-agent:latest
+    image: williamconti549/dd-apm-test-agent:pool-failures
     ports:
         - "127.0.0.1:9126:9126"
     environment:
@@ -363,6 +363,7 @@ services:
         - TRACE_LANGUAGE=ruby
         - DD_TRACE_AGENT_URL=http://ddagent:8126
         - PORT=9126
+        - DD_POOL_TRACE_CHECK_FAILURES=true
 
   elasticsearch:
     image: elasticsearch:8.1.3
