--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,6 +108,7 @@ test_containers:
       - DD_TRACE_AGENT_URL=http://ddagent:8126 # send all traces to agent
       - PORT=9126
       - DD_POOL_TRACE_CHECK_FAILURES=true
+      - DD_DISABLE_ERROR_RESPONSES=true
   - &testagent_port 9126
 
 check_exact_bundle_cache_hit: &check_exact_bundle_cache_hit
