--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -364,6 +364,7 @@ services:
         - DD_TRACE_AGENT_URL=http://ddagent:8126
         - PORT=9126
         - DD_POOL_TRACE_CHECK_FAILURES=true
+        - DD_DISABLE_ERROR_RESPONSES=true
 
   elasticsearch:
     image: elasticsearch:8.1.3
