--- a/.github/workflows/build-ruby.yml
+++ b/.github/workflows/build-ruby.yml
@@ -51,6 +51,10 @@ jobs:
           - engine: ruby
             version: 3.2.0
             dockerfile: Dockerfile-3.2.0
+          - engine: ruby
+            version: 3.3.0
+            dockerfile: Dockerfile-3.3.0
+          # ADD NEW RUBIES HERE
           - engine: jruby
             version: 9.2.21.0
             dockerfile: Dockerfile-jruby-9.2.21.0
