--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 version: '3.2'
 services:
-  # MRI
   tracer-2.1:
     image: ghcr.io/datadog/dd-trace-rb/ruby:2.1.10-dd
     command: /bin/bash
@@ -263,6 +262,30 @@ services:
       - extension-build-tmp:/app/tmp
       - bundle-3.2:/usr/local/bundle
       - "ddagent_var_run:${TEST_DDAGENT_VAR_RUN}"
+  tracer-3.3:
+    image: ghcr.io/datadog/dd-trace-rb/ruby:3.3.0-dd
+    command: /bin/bash
+    depends_on:
+      - ddagent
+      - elasticsearch
+      - memcached
+      - mongodb
+      - mysql
+      - postgres
+      - presto
+      - redis
+      - redis_old
+    env_file: ./.env
+    environment:
+      <<: *common-environment-3x
+      BUNDLE_GEMFILE: /app/Gemfile-3.3
+    stdin_open: true
+    tty: true
+    volumes:
+      - .:/app
+      - extension-build-tmp:/app/tmp
+      - bundle-3.3:/usr/local/bundle
+      - "ddagent_var_run:${TEST_DDAGENT_VAR_RUN}"
   # ADD NEW RUBIES HERE
   tracer-jruby-9.2:
     image: ghcr.io/datadog/dd-trace-rb/jruby:9.2.21.0-dd
@@ -429,6 +452,7 @@ volumes:
   bundle-3.0:
   bundle-3.1:
   bundle-3.2:
+  bundle-3.3:
   # ADD NEW RUBIES HERE
   bundle-jruby-9.2:
   bundle-jruby-9.3:
