--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,7 +10,4 @@ jobs:
         with:
           ruby-version: '3.2'
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      - name: Check for stale signature files
-        run: bundle exec rake rbs:stale
-      - name: Check types
-        run: bundle exec rake typecheck
+      - run: bundle exec rake typecheck
