--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -390,7 +390,7 @@ services:
       - ddagent_var_run:/var/run/datadog
 
   testagent:
-    image: williamconti549/dd-apm-test-agent:pool-failures
+    image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:latest
     ports:
         - "127.0.0.1:9126:9126"
     environment:
