Add resque and redis gem

--- a/integration/apps/rails-seven/Gemfile
+++ b/integration/apps/rails-seven/Gemfile
@@ -32,6 +32,12 @@ gem "puma", "~> 5.0"
 
 gem 'unicorn'
 
+# Use Resque for background job processing
+gem 'resque', "~> 2"
+
+# Redis is required for ActiveSupport::Cache::RedisCacheStore
+gem 'redis', "~> 4"
+
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
 
