--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,8 @@ test_containers:
     image: memcached:1.5-alpine
   - &memcached_port 11211
   - &container_testagent
-    image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:latest
+    # image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:latest
+    image: williamconti549/dd-apm-test-agent:service-naming
     name: testagent
     environment:
       - LOG_LEVEL=DEBUG
