--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -394,8 +394,7 @@ services:
       - ddagent_var_run:/var/run/datadog
 
   testagent:
-    # image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:latest
-    image: williamconti549/dd-apm-test-agent:service-naming
+    image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:latest
     ports:
         - "127.0.0.1:${DD_TEST_AGENT_PORT}:9126"
     depends_on:
