--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,11 @@ install-version-dependant-gems:
   parallel:
     matrix:
       - RUBY_VERSION: [ "3.0.0", "3.1.2-slim"]
+  rules:
+    - if: $RUBY_PACKAGE_VERSION
+      when: on_success
+    - if: '$CI_COMMIT_TAG =~ /^v.*/'
+      when: on_success
   stage: package
   needs: [ "install-base-ruby-gems" ]
   script:
@@ -53,10 +58,10 @@ package:
   extends: .package
   needs: ["install-version-dependant-gems", "install-base-ruby-gems"]
   rules:
-  - if: $RUBY_PACKAGE_VERSION
-    when: on_success
-  - if: '$CI_COMMIT_TAG =~ /^v.*/'
-    when: on_success
+    - if: $RUBY_PACKAGE_VERSION
+      when: on_success
+    - if: '$CI_COMMIT_TAG =~ /^v.*/'
+      when: on_success
   script:
     - ls ../WIP
     - ../.gitlab/build-deb-rpm.sh
