--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ install-version-dependant-gems:
   image: registry.ddbuild.io/images/mirror/ruby:$RUBY_VERSION
   parallel:
     matrix:
-      - RUBY_VERSION: [ "3.0.0", "3.1.2-slim"]
+      - RUBY_VERSION: [ "3.0.0"]
   rules:
     - if: $RUBY_PACKAGE_VERSION
       when: on_success
