--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - manual-images
   - package
   - deploy
   - macrobenchmarks
@@ -21,6 +22,40 @@ variables:
 
 default:
   tags: [ "runner:main", "size:large" ]
+
+build-image:
+  stage: manual-images
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_PIPELINE_SOURCE == "push"
+      changes:
+        - .gitlab/Dockerfile.*
+    - when: manual
+      allow_failure: true
+  tags: [ "runner:docker" ]
+  image: $DOCKER_REGISTRY/docker:20.10.13
+  parallel:
+    matrix:
+      - BUILD_NAME: [ '3.2.2' ]
+  script:
+    - >
+      docker build
+      --tag $CI_DOCKER_IMAGE_BASE/$BUILD_NAME:$CI_PIPELINE_ID
+      --file gitlab/Dockerfile.$BUILD_NAME
+      .
+    - docker push --all-tags $CI_DOCKER_IMAGE_BASE/$BUILD_NAME
+
+promote-image:
+  stage: manual-images
+  when: manual
+  tags: [ "runner:docker" ]
+  image: $DOCKER_REGISTRY/docker:20.10.13
+  parallel:
+    matrix:
+      - BUILD_NAME: [ '3.2.2' ]
+  script:
+    - docker pull $CI_DOCKER_IMAGE_BASE/$BUILD_NAME:$CI_PIPELINE_ID
+    - docker tag $CI_DOCKER_IMAGE_BASE/$BUILD_NAME:$CI_PIPELINE_ID $CI_DOCKER_IMAGE_BASE/$BUILD_NAME:current
+    - docker push $CI_DOCKER_IMAGE_BASE/$BUILD_NAME:current
 
 install-base-ruby-gems:
   image: registry.ddbuild.io/images/mirror/ruby:3.2.2
