--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,8 @@ promote-image:
     - docker push $CI_DOCKER_IMAGE_BASE/$BUILD_NAME:current
 
 install-base-ruby-gems:
-  image: registry.ddbuild.io/images/mirror/ruby:3.2.2
+  # image: registry.ddbuild.io/images/mirror/ruby:3.2.2
+  image: registry.ddbuild.io/ci/auto_inject/3.2.2:current
   stage: package
   rules:
     - if: $RUBY_PACKAGE_VERSION
@@ -72,10 +73,11 @@ install-base-ruby-gems:
       - vendor
 
 install-version-dependant-gems:
-  image: registry.ddbuild.io/images/mirror/ruby:$RUBY_VERSION
+  # image: registry.ddbuild.io/images/mirror/ruby:$RUBY_VERSION
+  image: registry.ddbuild.io/ci/auto_inject/$RUBY_VERSION:current
   parallel:
     matrix:
-      - RUBY_VERSION: [ "3.0.0", "3.1.4"]
+      - RUBY_VERSION: [ "3.0.6", "3.1.4"]
   rules:
     - if: $RUBY_PACKAGE_VERSION
       when: on_success
