add disk allocation variables in the environment in order to ensure the code works, even on a nearly full disk.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,11 @@ test_containers:
     environment:
       - discovery.type=single-node
       - DISABLE_SECURITY_PLUGIN=true
+      # make sure it works on nearly full disk
+      - cluster.routing.allocation.disk.watermark.low=3gb
+      - cluster.routing.allocation.disk.watermark.high=2gb
+      - cluster.routing.allocation.disk.watermark.flood_stage=1gb
+      - cluster.routing.allocation.disk.threshold_enabled=false
   - &opensearch_port 9200
   - &container_elasticsearch
     image: elasticsearch:8.1.3
