--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,12 +73,13 @@ test_containers:
   - &mysql_port 3306
   - &opensearch_host opensearch
   - &container_opensearch
-    image: opensearchproject/opensearch:2.8.0
+    image: opensearchproject/opensearch:1.3.6  # Version 2.8.0 causes flaky error (https://github.com/opensearch-project/docker-images/issues/31).
     name: *opensearch_host
     environment:
       - discovery.type=single-node
       - DISABLE_SECURITY_PLUGIN=true
-      # make sure it works on nearly full disk
+      # Make sure it works on nearly full disk.
+      - cluster.routing.allocation.disk.threshold_enabled=true
       - cluster.routing.allocation.disk.watermark.low=3gb
       - cluster.routing.allocation.disk.watermark.high=2gb
       - cluster.routing.allocation.disk.watermark.flood_stage=1gb
