--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ DD_METRIC_AGENT_PORT=8125
 DD_TRACE_AGENT_PORT=8126
 DD_INSTRUMENTATION_TELEMETRY_ENABLED=false
 DD_REMOTE_CONFIGURATION_ENABLED=true
+DD_TEST_AGENT_PORT=9126
 TEST_DDAGENT_VAR_RUN=/var/run/datadog
 TEST_DDAGENT_UNIX_SOCKET=${TEST_DDAGENT_VAR_RUN}/apm.socket
 TEST_DDAGENT_API_KEY=invalid_key_but_this_is_fine
