--- a/.gitlab/Dockerfile-2.7.8
+++ b/.gitlab/Dockerfile-2.7.8
@@ -1,8 +1,4 @@
-#
-# NOTE: THIS DOCKERFILE IS GENERATED VIA "apply-templates.sh"
-#
-# PLEASE DO NOT EDIT IT DIRECTLY.
-#
+# This is copied from official Docker image, but compile Ruby with `--disable-shared` instead.
 
 FROM buildpack-deps:buster
 
