--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ build-image:
   image: $DOCKER_REGISTRY/docker:20.10.13
   parallel:
     matrix:
+      # ADD NEW RUBIES HERE
       - RUBY_VERSION: [ '3.2.2', '3.1.4', '3.0.6', '2.7.8' ]
   script:
     - >
@@ -52,6 +53,7 @@ promote-image:
   image: $DOCKER_REGISTRY/docker:20.10.13
   parallel:
     matrix:
+      # ADD NEW RUBIES HERE
       - RUBY_VERSION: [ '3.2.2', '3.1.4', '3.0.6', '2.7.8' ]
   script:
     - docker pull $RUBY_CUSTOM_IMAGE_BASE/$RUBY_VERSION:$CI_PIPELINE_ID
@@ -67,7 +69,9 @@ install-base-ruby-gems:
     - if: '$CI_COMMIT_TAG =~ /^v.*/'
       when: on_success
   script:
-    - .gitlab/install-gem-to-folder.sh
+    # This would install all dependencies
+    - .gitlab/prepare_pkg_directory.sh
+    - ruby pkg/install_ddtrace_deps.rb debase-ruby_core_source libdatadog libddwaf msgpack ffi ddtrace
   artifacts:
     paths:
       - pkg
@@ -85,7 +89,7 @@ install-version-dependant-gems:
   stage: package
   needs: [ "install-base-ruby-gems" ]
   script:
-    - .gitlab/install-gem-to-folder-version-specific.sh
+    - ruby pkg/install_ddtrace_deps.rb msgpack ffi ddtrace
   artifacts:
     paths:
       - pkg
