--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ test_containers:
     image: memcached:1.5-alpine
   - &memcached_port 11211
   - &container_testagent
-    image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:v1.10.1
+    image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:v1.11.0
     name: testagent
     environment:
       - LOG_LEVEL=DEBUG
@@ -99,6 +99,7 @@ test_containers:
       - PORT=9126
       - DD_POOL_TRACE_CHECK_FAILURES=true
       - DD_DISABLE_ERROR_RESPONSES=true
+      - ENABLED_CHECKS=trace_content_length,trace_stall,meta_tracer_version_header,trace_count_header,trace_peer_service,trace_dd_service
   - &testagent_port 9126
 
 check_exact_bundle_cache_hit: &check_exact_bundle_cache_hit
