--- a/integration/apps/rack/Gemfile
+++ b/integration/apps/rack/Gemfile
@@ -4,6 +4,7 @@ source "https://rubygems.org"
 
 gem 'puma'
 gem 'unicorn'
+gem 'passenger'
 gem 'rack'
 gem 'rackup' if RUBY_VERSION >= '2.4'  # The `rackup` is its own gem since Rack 3.0
 
