--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,6 +108,8 @@ package:
 
 .release-package:
   stage: deploy
+  variables:
+    PRODUCT_NAME: auto_inject-rb
 
 deploy_to_reliability_env:
   stage: deploy
