--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -464,10 +464,11 @@ services:
     ports:
       - "127.0.0.1:${TEST_MYSQL_PORT}:3306"
   opensearch:
-    image: opensearchproject/opensearch:1.3.6 # Version 2.8.0 causes flaky error (https://github.com/opensearch-project/docker-images/issues/31).
+    image: opensearchproject/opensearch:2.8.0
     environment:
       - discovery.type=single-node
       - DISABLE_SECURITY_PLUGIN=true
+      - DISABLE_PERFORMANCE_ANALYZER_AGENT_CLI=true
       # Make sure it works on nearly full disk.
       - cluster.routing.allocation.disk.threshold_enabled=true
       - cluster.routing.allocation.disk.watermark.low=3gb
