--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -412,7 +412,7 @@ services:
       - ddagent_var_run:/var/run/datadog
 
   testagent:
-    image: williamconti549/dd-apm-test-agent:service-naming-ruby
+    image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:v1.12.0
     ports:
         - "127.0.0.1:${DD_TEST_AGENT_PORT}:9126"
     depends_on:
