--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,7 +109,7 @@ test_containers:
     image: memcached:1.5-alpine
   - &memcached_port 11211
   - &container_testagent
-    image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:v1.12.0
+    image: williamconti549/dd-apm-test-agent:integration-versions
     name: testagent
     environment:
       - LOG_LEVEL=DEBUG
