Updated BP env vars: 'DD_RELENV_CONFIGURATION'->'DD_BENCHMARKS_CONFIGURATION'

--- a/.gitlab/benchmarks.yml
+++ b/.gitlab/benchmarks.yml
@@ -41,17 +41,17 @@ variables:
 baseline-benchmarks:
   extends: .benchmarks
   variables:
-    DD_RELENV_CONFIGURATION: baseline
+    DD_BENCHMARKS_CONFIGURATION: baseline
 
 only-tracing-benchmarks:
   extends: .benchmarks
   variables:
-    DD_RELENV_CONFIGURATION: only-tracing
+    DD_BENCHMARKS_CONFIGURATION: only-tracing
 
 only-profiling-benchmarks:
   extends: .benchmarks
   variables:
-    DD_RELENV_CONFIGURATION: only-profiling
+    DD_BENCHMARKS_CONFIGURATION: only-profiling
     DD_PROFILING_ENABLED: "true"
     # Gitlab makes use of the rugged gem, which triggers the automatic no signals workaround use, see
     # https://docs.datadoghq.com/profiler/profiler_troubleshooting/ruby/#unexpected-failures-or-errors-from-ruby-gems-that-use-native-extensions-in-dd-trace-rb-1110
@@ -62,7 +62,7 @@ only-profiling-benchmarks:
 only-profiling-timeline-benchmarks:
   extends: .benchmarks
   variables:
-    DD_RELENV_CONFIGURATION: only-profiling
+    DD_BENCHMARKS_CONFIGURATION: only-profiling
     DD_PROFILING_ENABLED: "true"
     DD_PROFILING_NO_SIGNALS_WORKAROUND_ENABLED: "false"
     DD_PROFILING_EXPERIMENTAL_TIMELINE_ENABLED: "true"
@@ -70,27 +70,27 @@ only-profiling-timeline-benchmarks:
 profiling-and-tracing-benchmarks:
   extends: .benchmarks
   variables:
-    DD_RELENV_CONFIGURATION: profiling-and-tracing
+    DD_BENCHMARKS_CONFIGURATION: profiling-and-tracing
     DD_PROFILING_ENABLED: "true"
     DD_PROFILING_NO_SIGNALS_WORKAROUND_ENABLED: "false"
 
 tracing-and-appsec-benchmarks:
   extends: .benchmarks
   variables:
-    DD_RELENV_CONFIGURATION: tracing-and-appsec
+    DD_BENCHMARKS_CONFIGURATION: tracing-and-appsec
     DD_APPSEC_ENABLED: "true"
 
 tracing-and-appsec-and-no-remote-configuration-benchmarks:
   extends: .benchmarks
   variables:
-    DD_RELENV_CONFIGURATION: tracing-and-appsec-and-no-remote-configuration
+    DD_BENCHMARKS_CONFIGURATION: tracing-and-appsec-and-no-remote-configuration
     DD_APPSEC_ENABLED: "true"
     DD_REMOTE_CONFIGURATION_ENABLED: "false"
 
 profiling-and-tracing-and-appsec-benchmarks:
   extends: .benchmarks
   variables:
-    DD_RELENV_CONFIGURATION: profiling-and-tracing-and-appsec
+    DD_BENCHMARKS_CONFIGURATION: profiling-and-tracing-and-appsec
     DD_APPSEC_ENABLED: "true"
     DD_PROFILING_ENABLED: "true"
     DD_PROFILING_NO_SIGNALS_WORKAROUND_ENABLED: "false"
@@ -98,7 +98,7 @@ profiling-and-tracing-and-appsec-benchmarks:
 timeline-profiling-and-tracing-and-appsec-benchmarks:
   extends: .benchmarks
   variables:
-    DD_RELENV_CONFIGURATION: profiling-and-tracing-and-appsec
+    DD_BENCHMARKS_CONFIGURATION: profiling-and-tracing-and-appsec
     DD_APPSEC_ENABLED: "true"
     DD_PROFILING_ENABLED: "true"
     DD_PROFILING_NO_SIGNALS_WORKAROUND_ENABLED: "false"
