Add APPSEC_AUTO_EVENTS_EXTENDED to the system test GH action

--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -168,6 +168,9 @@ jobs:
             app: rack
             scenario: APPSEC_RATE_LIMITER
           - library: ruby
+            app: rails70
+            scenario: APPSEC_AUTO_EVENTS_EXTENDED
+          - library: ruby
             app: rack
             scenario: SAMPLING
           - library: ruby
