Fix a bug with ASM span tags reporting the number of WAF failed loaded rules

--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -172,6 +172,9 @@ jobs:
             scenario: APPSEC_AUTO_EVENTS_EXTENDED
           - library: ruby
             app: rack
+            scenario: APPSEC_RULES_MONITORING_WITH_ERRORS
+          - library: ruby
+            app: rack
             scenario: SAMPLING
           - library: ruby
             app: rack
